--- a/app/src/main/assets/web/collapsible_tables.css
+++ b/app/src/main/assets/web/collapsible_tables.css
@@ -144,7 +144,7 @@
 
 .collapsible-header .title-wrapper {
         flex-grow: 1;
-        font-family: 'Alegreya', 'Palatino', 'Georgia', serif;
+        font-family: 'Rubik', 'Segoe UI', 'Arial', sans-serif;
         font-weight: bold;
 }
 
